*** empty log message ***

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,7 @@ aclocal_macros = libtool.m4 replfunc.m4
 
 # Distribute ltconfig and ltmain.sh so that the demo directory works.
 EXTRA_DIST = $(aclocal_macros) libtoolize.in ltconfig ltconfig.in \
-	ltmain.sh ltmain.sh.in README-automake
+	ltmain.sh ltmain.sh.in README-automake libtool.pkg
 CLEANFILES = libtool libtoolize
 MAINTAINERCLEANFILES = ltconfig ltmain.sh
 
