--- a/ltconfig.in
+++ b/ltconfig.in
@@ -395,45 +395,45 @@ if test "$with_gcc" = yes; then
   link_static_flag='-static'
 else
   # PORTME Check for PIC flags for the system compiler.
-  case "$host" in
-  *-*-aix3* | *-*-aix4*)
+  case "$host_os" in
+  aix3* | aix4*)
     # FIXME All rs/6000 code is PIC, but is there any non-rs/6000 AIX platform?
     pic_flag=
     link_static_flag='-bnso -bI:/lib/syscalls.exp'
     ;;
 
-  *-*-hpux9* | *-*-hpux10*)
+  hpux9* | hpux10*)
     # FIXME is there a better link_static_flag that works with the bundled CC?
     wl='-Wl,'
     link_static_flag='${wl}-a ${wl}archive'
     pic_flag='+Z'
     ;;
 
-  *-*-irix5* | *-*-irix6*)
+  irix5* | irix6*)
     wl='-Wl,'
     link_static_flag='-non_shared'
     # PIC (with -KPIC) is the default.
     pic_flag=
     ;;
 
-  *-*-osf3* | *-*-osf4*)
+  osf3* | osf4*)
     # FIXME - pic_flag is probably required for hppa*-osf* and i860-osf*
     wl='-Wl,'
     link_static_flag='-non_shared'
     ;;
 
-  *-*-sco3.2v5*)
+  sco3.2v5*)
     pic_flag='-Kpic'
     link_static_flag='-dn'
     special_shlib_compile_flags='-belf'
     ;;
 
-  *-*-solaris2*)
+  solaris2*)
     pic_flag='-KPIC'
     link_static_flag='-Bstatic'
     ;;
 
-  *-*-sunos4*)
+  sunos4*)
     pic_flag='-PIC'
     link_static_flag='-Bstatic'
     wl='-Qoption ld '
@@ -445,8 +445,8 @@ else
   esac
 fi
 
-case "$host" in
-rs6000-*-* | powerpc-*-* | powerpcle-*-*)
+case "$host_cpu" in
+rs6000 | powerpc | powerpcle)
   # Yippee! All RS/6000 and PowerPC code is position-independent.
   pic_flag=
   ;;
@@ -467,6 +467,23 @@ if test -n "$special_shlib_compile_flags"; then
     echo "$progname: add \`$special_shlib_compile_flags' to the CC or CFLAGS env variable and reconfigure" 1>&2
     can_build_shared=no
   fi
+fi
+
+# See if we are using a broken GCC collect2 program.
+if test "$with_gcc" = yes; then
+  echo $ac_n "checking for broken GCC collect2... $ac_c" 1>&6
+
+  # FIXME: Run a test here, instead of relying on the canonical system name.
+  case "$host_os" in
+  aix3*)
+    can_build_shared=no
+    echo $ac_t yes 1>&6
+    echo "$progname: to build shared libraries, set the CC env variable to \`xlc' and reconfigure" 1>&2
+    ;;
+  *)
+    echo $ac_t no 1>&6
+    ;;
+  esac
 fi
 
 echo $ac_n "checking for $compiler option to statically link programs... $ac_c" 1>&6
@@ -498,14 +515,16 @@ hardcode_libdir_flag_spec=
 hardcode_libdir_separator=
 hardcode_direct=no
 hardcode_minus_L=no
+hardcode_runpath_var=no
 hardcode_shlibpath_var=unsupported
+runpath_var=
 
 ld_shlibs=yes
 if test "$with_gnu_ld" = yes; then
   # See if GNU ld supports shared libraries.
 
-  case "$host" in
-  *-*-sunos4*)
+  case "$host_os" in
+  sunos4*)
     ld_shlibs=yes
     hardcode_direct=yes
     hardcode_shlibpath_var=no
@@ -513,6 +532,8 @@ if test "$with_gnu_ld" = yes; then
 
   *)
     if $LD --help 2>&1 | egrep ': supported targets:.* elf' > /dev/null; then
+      runpath_var=LD_RUN_PATH
+      hardcode_runpath_var=yes
       ld_shlibs=yes
     else
       ld_shlibs=no
@@ -527,47 +548,47 @@ if test "$with_gnu_ld" = yes; then
   fi
 else
   # PORTME fill in a description of your system's linker (not GNU ld)
-  case "$host" in
-  *-*-aix3*)
+  case "$host_os" in
+  aix3*)
     archive_cmds='/usr/ucb/nm$libobjs | egrep \" [BD] \" | sed \"s/^.* //\" > $lib.exp;$LD -o $objdir/$soname$libobjs -bE:$lib.exp -T512 -H512 -bM:SRE -lc$deplibs;$AR cru $lib $objdir/$soname'
     # Note: this linker hardcodes the directories in LIBPATH if there
     # are no directories specified by -L.
     hardcode_minus_L=yes
     ;;
 
-  *-*-aix4*)
+  aix4*)
     archive_cmds='/bin/nm -B$libobjs | egrep \" [BD] \" | sed \"s/^.* //\" > $lib.exp;$cc -o $objdir/$soname$libobjs ${wl}-bE:$lib.exp ${wl}-bM:SRE ${wl}-bnoentry$deplibs;$AR cru $lib $objdir/$soname'
     hardcode_direct=yes
     hardcode_minus_L=yes
     ;;
 
-  *-*-freebsd*)
+  freebsd*)
     archive_cmds='$LD -Bshareable -o $lib$libobjs$deplibs'
     hardcode_direct=yes
     hardcode_minus_L=yes
     hardcode_shlibpath_var=no
     ;;
 
-  *-*-hpux9*)
+  hpux9*)
     archive_cmds='$rm $objdir/$soname;$LD -b +s +b $install_libdir -o $objdir/$soname$libobjs$deplibs;mv $objdir/$soname $lib'
     hardcode_libdir_flag_spec='${wl}+b ${wl}$libdir'
     hardcode_direct=yes
     hardcode_minus_L=yes
     ;;
 
-  *-*-hpux10*)
+  hpux10*)
     archive_cmds='$LD -b +h $soname +s +b $install_libdir -o $lib$libobjs$deplibs'
     hardcode_libdir_flag_spec='${wl}+b ${wl}$libdir'
     hardcode_direct=yes
     hardcode_minus_L=yes
     ;;
 
-  *-*-irix5* | *-*-irix6*)
+  irix5* | irix6*)
     archive_cmds='$LD -shared -o $lib -soname $soname -set_version $verstring$libobjs -lc$deplibs'
     hardcode_libdir_flag_spec='${wl}-rpath ${wl}$libdir'
     ;;
 
-  *-*-netbsd*)
+  netbsd* | openbsd*)
     # Tested with NetBSD 1.2 ld
     archive_cmds='$LD -Bshareable -o $lib$libobjs$deplibs'
     hardcode_libdir_flag_spec='-R$libdir'
@@ -575,24 +596,24 @@ else
     hardcode_shlibpath_var=no
     ;;
 
-  *-*-osf3* | *-*-osf4*)
+  osf3* | osf4*)
     archive_cmds='$LD -shared -o $lib -soname $soname -set_version $verstring$libobjs -lc$deplibs'
     hardcode_libdir_flag_spec='${wl}-rpath ${wl}$libdir'
     hardcode_libdir_separator=:
     ;;
 
-  *-*-sco3.2v5*)
+  sco3.2v5*)
     archive_cmds='$LD -G -o $lib$libobjs$deplibs'
     hardcode_direct=yes
     ;;
 
-  *-*-solaris2*)
+  solaris2*)
     archive_cmds='$LD -G -z text -h $soname -o $lib$libobjs$deplibs'
     hardcode_libdir_flag_spec='-R$libdir'
     hardcode_shlibpath_var=no
     ;;
 
-  *-*-sunos4*)
+  sunos4*)
     archive_cmds='$LD -assert pure-text -Bstatic -o $lib$libobjs'
     hardcode_libdir_flag_spec='-L$libdir'
     hardcode_direct=yes
@@ -611,10 +632,12 @@ echo $ac_t "$ld_shlibs" 1>&6
 # Check hardcoding attributes.
 echo $ac_n "checking how to hardcode library paths into programs... $ac_c" 1>&6
 hardcode_action=
-if test -n "$hardcode_libdir_flag_spec"; then
+if test -n "$hardcode_libdir_flag_spec" || \
+   test "$hardcode_runpath_var" = yes; then
+
   # We can hardcode non-existant directories.
-  if test "$hardcode_direct" != no &&
-     test "$hardcode_minus_L" != no &&
+  if test "$hardcode_direct" != no && \
+     test "$hardcode_minus_L" != no && \
      test "$hardcode_shlibpath_var" != no; then
 
     # Linking always hardcodes the temporary library directory.
@@ -623,8 +646,8 @@ if test -n "$hardcode_libdir_flag_spec"; then
     # We can link without hardcoding, and we can hardcode nonexisting dirs.
     hardcode_action=immediate
   fi
-elif test "$hardcode_direct" != yes &&
-     test "$hardcode_minus_L" != yes &&
+elif test "$hardcode_direct" != yes && \
+     test "$hardcode_minus_L" != yes && \
      test "$hardcode_shlibpath_var" != yes; then
   # We can't hardcode anything.
   hardcode_action=unsupported
@@ -654,8 +677,8 @@ version_type=none
 dynamic_linker="$host_os ld.so"
 
 echo $ac_n "checking dynamic linker characteristics... $ac_c" 1>&6
-case "$host" in
-*-*-aix3* | *-*-aix4*)
+case "$host_os" in
+aix3* | aix4*)
   version_type=linux
   library_names_spec='$libname.so.$versuffix $libname.a'
   shlibpath_var=LIBPATH
@@ -664,16 +687,20 @@ case "$host" in
   soname_spec='$libname.so.$major'
   ;;
 
-*-*-freebsd*)
+freebsd*)
   version_type=sunos
   library_names_spec='$libname.so.$versuffix $libname.so'
   finish_cmds='ldconfig -m $libdir'
   shlibpath_var=LD_LIBRARY_PATH
   ;;
 
-# *-*-gnu* needs to come after *-*-linux-gnu*.
+gnu*)
+  version_type=sunos
+  library_names_spec='$libname.so.$versuffix'
+  shlibpath_var=LD_LIBRARY_PATH
+  ;;
 
-*-*-hpux9* | *-*-hpux10*)
+hpux9* | hpux10*)
   # Give a soname corresponding to the major version so that dld.sl refuses to
   # link against other versions.
   dynamic_linker="$host_os dld.sl"
@@ -685,7 +712,7 @@ case "$host" in
   postinstall_cmds='chmod 555 $lib'
   ;;
 
-*-*-irix5* | *-*-irix6*)
+irix5* | irix6*)
   version_type=osf
   soname_spec='$libname.so'
   library_names_spec='$libname.so.$versuffix $libname.so'
@@ -693,13 +720,13 @@ case "$host" in
   ;;
 
 # No shared lib support for Linux oldld, aout, or coff.
-*-*-linux-gnuoldld* | *-*-linux-gnuaout* | *-*-linux-gnucoff*)
+linux-gnuoldld* | linux-gnuaout* | linux-gnucoff*)
   dynamic_linker=no
   can_build_shared=no
   ;;
 
 # This must be Linux ELF.
-*-*-linux-gnu*)
+linux-gnu*)
   version_type=linux
   library_names_spec='$libname.so.$versuffix $libname.so.$major $libname.so'
   soname_spec='$libname.so.$major'
@@ -707,41 +734,35 @@ case "$host" in
   shlibpath_var=LD_LIBRARY_PATH
   ;;
 
-*-*-gnu*)
-  version_type=sunos
-  library_names_spec='$libname.so.$versuffix'
-  shlibpath_var=LD_LIBRARY_PATH
-  ;;
-
-*-*-netbsd*)
+netbsd* | openbsd*)
   version_type=sunos
   library_names_spec='$libname.so.$versuffix'
   finish_cmds='ldconfig -m $libdir'
   shlibpath_var=LD_LIBRARY_PATH
   ;;
 
-*-*-osf3* | *-*-osf4*)
+osf3* | osf4*)
   version_type=osf
   soname_spec='$libname.so'
   library_names_spec='$libname.so.$versuffix $libname.so'
   shlibpath_var=LD_LIBRARY_PATH
   ;;
 
-*-*-sco3.2v5*)
+sco3.2v5*)
   version_type=osf
   soname_spec='$libname.so.$major'
   library_names_spec='$libname.so.$versuffix $libname.so.$major $libname.so'
   shlibpath_var=LD_LIBRARY_PATH
   ;;
 
-*-*-solaris2*)
+solaris2*)
   version_type=linux
   library_names_spec='$libname.so.$versuffix $libname.so.$major $libname.so'
   soname_spec='$libname.so.$major'
   shlibpath_var=LD_LIBRARY_PATH
   ;;
 
-*-*-sunos4*)
+sunos4*)
   version_type=sunos
   library_names_spec='$libname.so.$versuffix'
   finish_cmds='ldconfig $libdir'
@@ -884,6 +905,9 @@ finish_cmds='$finish_cmds'
 striplib='$striplib'
 old_striplib='$old_striplib'
 
+# This is the shared library runtime path variable.
+runpath_var=$runpath_var
+
 # This is the shared library path variable.
 shlibpath_var=$shlibpath_var
 
@@ -905,7 +929,11 @@ hardcode_direct=$hardcode_direct
 # resulting binary.
 hardcode_minus_L=$hardcode_minus_L
 
-# Set to yes if using SHLIBPATH_VAR=DIR during linking hardcodes DIR into the
+# Set to yes if using RUNPATH_VAR=DIR during linking hardcodes DIR into the
+# resulting binary.
+hardcode_runpath_var=$hardcode_runpath_var
+
+# Set to yes if using SHLIBPATH_VAR=DIR during linking hardcodes DIR into
 # the resulting binary.
 hardcode_shlibpath_var=$hardcode_shlibpath_var
 
