--- a/ltmain.sh.in
+++ b/ltmain.sh.in
@@ -288,6 +288,7 @@ if test -z "$show_help"; then
     hardcode_libdirs=
     install_libdir=
     libobjs=
+    libobjlibs=
     link_against_libtool_libs=
     link_static=
     ltlibs=
@@ -295,6 +296,7 @@ if test -z "$show_help"; then
     output=
     prev=
     prevarg=
+    perm_rpath=
     temp_rpath=
     vinfo=
     whole_archive=no
@@ -414,7 +416,8 @@ if test -z "$show_help"; then
 	  done
 	elif test -f "$dir$objdir/$file"; then
 	  # .libs/libfoo.a exists, so this is an archive of libobjects.
-	  libobjs="$libobjs $arg"
+	  libobjlibs="$libobjlibs $dir$objdir/$file"
+	  arg="$dir$objdir/$file"
 	else
 	  # Standard archive.
 	  objs="$objs $arg"
@@ -499,7 +502,14 @@ if test -z "$show_help"; then
 	      compile_command="$compile_command $hardcode_libdir_flag"
 	      finalize_command="$finalize_command $hardcode_libdir_flag"
 	    fi
+	  elif test "$hardcode_runpath_var" = yes; then
+	    # Do the same for the permanent run path.
+	    case "$perm_rpath " in
+	    "* $libdir *") ;;
+	    *) perm_rpath="$perm_rpath $libdir" ;;
+	    esac
 	  fi
+
 
 	  case "$hardcode_action" in
 	  immediate)
@@ -630,6 +640,9 @@ if test -z "$show_help"; then
 	echo "$progname: cannot build libtool library \`$output' from non-libtool objects:$objs" 2>&1
 	exit 1
       fi
+
+      # Incorporate all of the convenience libraries.
+      libobjs="$libobjs"`echo "$libobjlibs" | sed "s%/$objdir/%/%g"`
 
       # How the heck are we supposed to write a wrapper for a shared library?
       if test -n "$link_against_libtool_libs"; then
@@ -825,10 +838,10 @@ if test -z "$show_help"; then
       # Delete the old objects.
       $run $rm $obj $libobj
 
-      # Create the old-style object (skipping any convenience libraries).
-      # FIXME: skipping them is simplistic.  We should determine which members
-      # are actually needed to resolve symbols.
-      reload_objs="$objs"`echo "$libobjs " | sed 's/[^ 	]*\.a //g; s/\.lo /.o /g; s/ $//g'`
+      # Create the old-style object.
+      # FIXME: simplistically, we include all libobjlibs here.
+      # We really should determine which members are needed to resolve symbols.
+      reload_objs="$objs"`echo "$libobjs " | sed 's/[^ 	]*\.a //g; s/\.lo /.o /g; s/ $//g'`"$libobjlibs"
 
       output="$obj"
       cmds=`eval echo \"$reload_cmds\"`
@@ -876,6 +889,7 @@ if test -z "$show_help"; then
       if test -n "$libobjs"; then
 	# Transform all the library objects into standard objects.
 	compile_command=`echo "$compile_command " | sed 's/\.lo /.o /g; s/ $//'`
+	finalize_command=`echo "$finalize_command " | sed 's/\.lo /.o /g; s/ $//'`
       fi
 
       if test -z "$link_against_libtool_libs" || test "$build_libtool_libs" != yes; then
@@ -925,16 +939,27 @@ if test -z "$show_help"; then
 	    ;;
 	  esac
 	done
+	temp_rpath="$rpath"
       fi
 
       # Delete the old output file.
       $run $rm $output
 
       if test -n "$compile_shlibpath"; then
-	compile_command="$shlibpath_var=$compile_shlibpath\$$shlibpath_var $compile_command"
+	compile_command="$shlibpath_var=\"$compile_shlibpath\$$shlibpath_var\" $compile_command"
       fi
       if test -n "$finalize_shlibpath"; then
-	finalize_command="$shlibpath_var=$finalize_shlibpath\$$shlibpath_var $finalize_command"
+	finalize_command="$shlibpath_var=\"$finalize_shlibpath\$$shlibpath_var\" $finalize_command"
+      fi
+
+      if test -n "$perm_rpath"; then
+	# We should set the runpath_var.
+	rpath=
+	for dir in $perm_rpath; do
+	  rpath="$rpath$dir:"
+	done
+	compile_command="$runpath_var=\"$rpath\$$runpath_var\" $compile_command"
+	finalize_command="$runpath_var=\"$rpath\$$runpath_var\" $finalize_command"
       fi
 
       case "$hardcode_action" in
@@ -971,8 +996,8 @@ if test -z "$show_help"; then
 # This environment variable determines our operation mode.
 if test "\$libtool_install_magic" = "$magic"; then
   # install mode needs the following variables:
-  link_against_libtool_libs="$link_against_libtool_libs"
-  finalize_command="$finalize_command"
+  link_against_libtool_libs='$link_against_libtool_libs'
+  finalize_command='$finalize_command'
 else
   # Find the directory that this script lives in.
   thisdir=\`echo \$0 | sed 's%/[^/]*$%%'\`
@@ -1000,11 +1025,11 @@ else
 EOF
 
 	# Export our shlibpath_var if we have one.
-	if test -n "$shlibpath_var" && test -n "$rpath"; then
+	if test -n "$shlibpath_var" && test -n "$temp_rpath"; then
 	  cat >> $output <<EOF
 
     # Add our own library path to $shlibpath_var
-    $shlibpath_var="$rpath\$$shlibpath_var"
+    $shlibpath_var="$temp_rpath\$$shlibpath_var"
     export $shlibpath_var
 EOF
 	fi
@@ -1036,10 +1061,10 @@ EOF
       # Now set the variables for building old libraries.
       oldlib="$objdir/$libname.a"
 
-      # Transform .lo files to .o (skipping convenience libraries).
-      # FIXME: skipping them is simplistic.  We should determine which members
-      # are actually needed to resolve symbols.
-      oldobjs="$objs"`echo "$libobjs " | sed 's/[^ 	]*\.a //g; s/\.lo /.o /g; s/ $//g'`
+      # Transform .lo files to .o files.
+      # FIXME: simplistically, we include all libobjlibs here.
+      # We really should determine which members are needed to resolve symbols.
+      oldobjs="$objs"`echo "$libobjs " | sed 's/[^ 	]*\.a //g; s/\.lo /.o /g; s/ $//g'`"$libobjlibs"
 
       if test -d "$objdir"; then
 	$show "$rm $oldlib"
@@ -1457,11 +1482,18 @@ EOF
       ltlibs="$ltlibs $lib"
     done
 
+    if test -z "$ltlibs"; then
+      echo "$progname: you must specify at least one LTLIBRARY" 1>&2
+      echo "$help" 1>&2
+      exit 1
+    fi
+
     # Now check to make sure each one is a valid libtool library.
     status=0
     for lib in $ltlibs; do
       dlname=
       libdir=
+      library_names=
 
       # Check to see that this really is a libtool archive.
       if egrep "^# Generated by $PROGRAM" $arg >/dev/null 2>&1; then :
@@ -1482,6 +1514,9 @@ EOF
         status=1
       elif test -n "$dlname"; then
 	echo "$libdir/$dlname"
+      elif test -z "$library_names"; then
+        echo "$progname: \`$arg' is not a shared library" 1>&2
+        status=1
       else
         echo "$progname: \`$arg' was not linked with \`-export-dynamic'" 1>&2
         status=1
@@ -1631,7 +1666,7 @@ EOF
 
 dlname)
   cat <<EOF
-Usage: $progname [OPTION]... --mode=dlname LTLIBRARY [LTLIBRARY]...
+Usage: $progname [OPTION]... --mode=dlname LTLIBRARY...
 
 Print filenames to use to \`dlopen' libtool libraries.
 
