--- a/ltconfig.in
+++ b/ltconfig.in
@@ -87,6 +87,7 @@ Usage: $progname [OPTION]... LTMAIN [HOST]
 Generate a system-specific libtool script.
 
     --disable-shared       do not build shared libraries
+    --disable-static       do not build static libraries
     --help                 display this help and exit
     --no-verify            do not verify that HOST is a valid host type
     --quiet                same as \`--silent'
@@ -104,6 +105,8 @@ EOM
   ;;
 
   --disable-shared) enable_shared=no ;;
+
+  --disable-static) enable_static=no ;;
 
   --quiet | --silent) silent=yes ;;
 
@@ -500,6 +503,8 @@ with_gnu_ld=no
 set dummy $LD
 linker="$2"
 echo $ac_n "checking if $LD is GNU ld... $ac_c" 1>&6
+# I'd rather use --version here, but apparently some GNU ld's don't accept
+# it, but do accept -v.
 if $LD -v 2>&1 | egrep '(GNU ld|with BFD)' > /dev/null; then
   with_gnu_ld=yes
   linker="GNU ld"
@@ -562,10 +567,17 @@ else
     hardcode_minus_L=yes
     ;;
 
-  freebsd*)
+  freebsd2*)
     archive_cmds='$LD -Bshareable -o $lib$libobjs$deplibs'
     hardcode_direct=yes
     hardcode_minus_L=yes
+    hardcode_shlibpath_var=no
+    ;;
+
+  freebsd3*)
+    archive_cmds='$CC -shared -o $lib$libobjs$deplibs'
+    hardcode_direct=yes
+    hardcode_minusL=yes
     hardcode_shlibpath_var=no
     ;;
 
@@ -687,7 +699,7 @@ aix3* | aix4*)
   soname_spec='$libname.so.$major'
   ;;
 
-freebsd*)
+freebsd2* | freebsd3*)
   version_type=sunos
   library_names_spec='$libname.so.$versuffix $libname.so'
   finish_cmds='ldconfig -m $libdir'
@@ -821,6 +833,8 @@ echo "$ac_t""$enable_shared" 1>&6
 
 # Make sure either enable_shared or enable_static is yes.
 test "$enable_shared" = yes || enable_static=yes
+
+echo "checking whether to build static libraries... $enable_static" 1>&6
 
 ofile=libtool
 trap "$rm $ofile; exit 1" 1 2 15
