--- a/ltconfig.in
+++ b/ltconfig.in
@@ -514,6 +514,7 @@ echo $ac_t "$with_gnu_ld" 1>&6
 # See if the linker supports building shared libraries.
 echo $ac_n "checking if $linker supports shared libraries... $ac_c" 1>&6
 
+allow_undefined_flag=
 archive_cmds=
 export_dynamic_flag=
 hardcode_libdir_flag_spec=
@@ -555,6 +556,7 @@ else
   # PORTME fill in a description of your system's linker (not GNU ld)
   case "$host_os" in
   aix3*)
+    allow_undefined_flag=unsupported
     archive_cmds='/usr/ucb/nm$libobjs | egrep \" [BD] \" | sed \"s/^.* //\" > $lib.exp;$LD -o $objdir/$soname$libobjs -bE:$lib.exp -T512 -H512 -bM:SRE -lc$deplibs;$AR cru $lib $objdir/$soname'
     # Note: this linker hardcodes the directories in LIBPATH if there
     # are no directories specified by -L.
@@ -562,6 +564,7 @@ else
     ;;
 
   aix4*)
+    allow_undefined_flag=unsupported
     archive_cmds='/bin/nm -B$libobjs | egrep \" [BD] \" | sed \"s/^.* //\" > $lib.exp;$cc -o $objdir/$soname$libobjs ${wl}-bE:$lib.exp ${wl}-bM:SRE ${wl}-bnoentry$deplibs;$AR cru $lib $objdir/$soname'
     hardcode_direct=yes
     hardcode_minus_L=yes
@@ -609,7 +612,8 @@ else
     ;;
 
   osf3* | osf4*)
-    archive_cmds='$LD -shared -o $lib -soname $soname -set_version $verstring$libobjs -lc$deplibs'
+    allow_undefined_flag=' -expect_unresolved'
+    archive_cmds='$LD -shared${allow_undefined_flag} -o $lib -soname $soname -set_version $verstring$libobjs -lc$deplibs'
     hardcode_libdir_flag_spec='${wl}-rpath ${wl}$libdir'
     hardcode_libdir_separator=:
     ;;
@@ -911,6 +915,9 @@ old_postinstall_cmds='$old_postinstall_cmds'
 # Commands used to build and install a shared archive.
 archive_cmds='$archive_cmds'
 postinstall_cmds='$postinstall_cmds'
+
+# Flag that allows shared libraries with undefined symbols to be built.
+allow_undefined_flag='$allow_undefined_flag'
 
 # Commands used to finish a libtool library installation in a directory.
 finish_cmds='$finish_cmds'
