--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,7 +4,7 @@ AUTOMAKE_OPTIONS = gnits
 
 makesequence = demo-make.test demo-exec.test \
 	demo-inst.test demo-unst.test hardcode.test
-TESTS =	demo-conf.test $(makesequence) \
+TESTS =	assign.test demo-conf.test $(makesequence) \
 	link.test link-2.test suffix.test test-e.test
 
 EXTRA_DIST = defs tlibtool $(TESTS)
