--- a/ltmain.sh.in
+++ b/ltmain.sh.in
@@ -32,8 +32,6 @@ VERSION=@VERSION@
 
 default_mode=NONE
 help="Try \`$progname --help' for more information."
-ln_s="ln -s"
-cp_p="cp -p"
 magic="%%%MAGIC variable%%%"
 mkdir="mkdir"
 mv="mv -f"
@@ -247,7 +245,7 @@ if test -z "$show_help"; then
     if test "$build_libtool_libs" = yes; then
       # All platforms use -DPIC, to notify preprocessed assembler code.
       $show "$base_compile$pic_flag -DPIC $srcfile"
-      if eval "$run $base_compile$pic_flag -DPIC $srcfile"; then :
+      if $run eval "$base_compile$pic_flag -DPIC $srcfile"; then :
       else
 	test -n "$obj" && $run $rm $obj
 	exit 1
@@ -255,8 +253,8 @@ if test -z "$show_help"; then
 
       # If we have no pic_flag, then copy the object into place and finish.
       if test -z "$pic_flag"; then
-	$show "$ln_s $obj $libobj"
-	$run $ln_s $obj $libobj || $run $cp_p $obj $libobj
+	$show "$LN_S $obj $libobj"
+	$run $LN_S $obj $libobj
 	exit $?
       fi
 
@@ -268,7 +266,7 @@ if test -z "$show_help"; then
     # Only build a position-dependent object if we build old libraries.
     if test "$build_old_libs" = yes; then
       $show "$base_compile $srcfile"
-      if eval "$run $base_compile $srcfile"; then :
+      if $run eval "$base_compile $srcfile"; then :
       else
         $run $rm $obj $libobj
         exit 1
@@ -279,7 +277,7 @@ if test -z "$show_help"; then
     # link it into a program.
     if test "$build_libtool_libs" != yes; then
       $show "echo timestamp > $libobj"
-      eval "$run echo timestamp > $libobj" || exit $?
+      $run eval "echo timestamp > $libobj" || exit $?
     fi
 
     exit 0
@@ -730,7 +728,7 @@ if test -z "$show_help"; then
 
       # Check to see if the archive will have undefined symbols.
       if test "$allow_undefined" = yes; then
-	if "$allow_undefined_flag" = unsupported; then
+	if test "$allow_undefined_flag" = unsupported; then
 	  echo "$progname: warning: undefined symbols not allowed in $host shared libraries" 1>&2
 	  build_libtool_libs=no
 	fi
@@ -756,7 +754,7 @@ if test -z "$show_help"; then
 	linknames=
 	for link
 	do
-	  linknames="$linknames $objdir/$link"
+	  linknames="$linknames $link"
 	done
 
 	# Use standard objects if they are PIC.
@@ -768,14 +766,14 @@ if test -z "$show_help"; then
 	for cmd in $cmds; do
 	  IFS="$save_ifs"
 	  $show "$cmd"
-	  eval "$run $cmd" || exit $?
+	  $run eval "$cmd" || exit $?
 	done
 	IFS="$save_ifs"
 
 	# Create links to the real library.
 	for link in $linknames; do
-	  $show "$ln_s $realname $link"
-	  $run $ln_s $realname $link || exit $?
+	  $show "(cd $objdir && $LN_S $realname $link)"
+	  $run eval "(cd $objdir && $LN_S $realname $link)" || exit $?
 	done
 
 	# If -export-dynamic was specified, set the dlname.
@@ -831,7 +829,7 @@ if test -z "$show_help"; then
       for cmd in $cmds; do
         IFS="$save_ifs"
         $show "$cmd"
-	eval "$run $cmd" || exit $?
+	$run eval "$cmd" || exit $?
       done
       IFS="$save_ifs"
 
@@ -842,7 +840,7 @@ if test -z "$show_help"; then
         # Create an invalid libtool object if no PIC, so that we don't
         # accidentally link it into a program.
 	$show "echo timestamp > $libobj"
-	eval "$run echo timestamp > $libobj" || exit $?
+	$run eval "echo timestamp > $libobj" || exit $?
 	exit 0
       fi
 
@@ -855,13 +853,13 @@ if test -z "$show_help"; then
         for cmd in $cmds; do
           IFS="$save_ifs"
           $show "$cmd"
-          eval "$run $cmd" || exit $?
+          $run eval "$cmd" || exit $?
         done
         IFS="$save_ifs"
       else
         # Just create a symlink.
-        $show "$ln_s $obj $libobj"
-        $run $ln_s $obj $libobj || $run $cp_p $obj $libobj || exit 1
+        $show "$LN_S $obj $libobj"
+        $run $LN_S $obj $libobj || exit 1
       fi
 
       exit 0
@@ -961,7 +959,7 @@ if test -z "$show_help"; then
       esac
 
       $show "$compile_command"
-      eval "$run $compile_command" || exit $?
+      $run eval "$compile_command" || exit $?
 
       # Now create the wrapper script.
       echo "creating $output"
@@ -1068,7 +1066,7 @@ EOF
       for cmd in $cmds; do
         IFS="$save_ifs"
         $show "$cmd"
-	eval "$run $cmd" || exit $?
+	$run eval "$cmd" || exit $?
       done
       IFS="$save_ifs"
     fi
@@ -1108,8 +1106,8 @@ EOF
 
       # Do a symbolic link so that the libtool archive can be found in
       # LD_LIBRARY_PATH before the program is installed.
-      $show "$ln_s ../$output $objdir/$output"
-      $run $ln_s ../$output $objdir/$output || $run $cp_p ../$output $objdir/$output || exit 1
+      $show "(cd $objdir && $LN_S ../$output $output)"
+      $run eval "(cd $objdir && $LN_S ../$output $output)" || exit 1
       ;;
     esac
     exit 0
@@ -1278,7 +1276,7 @@ EOF
 
 	  # Install the shared library and build the symlinks.
 	  $show "$install_prog $dir/$realname $destdir/$realname"
-	  eval "$run $install_prog $dir/$realname $destdir/$realname" || exit $?
+	  $run eval "$install_prog $dir/$realname $destdir/$realname" || exit $?
 	  test "X$dlname" = "X$realname" && dlname=
 
 	  # Support stripping libraries.
@@ -1291,7 +1289,7 @@ EOF
 	    fi
 	  fi
 
-	  if test -n "$1"; then
+	  if test $# -gt 0; then
 	    # Delete the old symlinks.
             rmcmd="$rm"
             for linkname
@@ -1305,15 +1303,15 @@ EOF
 	    for linkname
 	    do
 	      test "X$dlname" = "X$linkname" && dlname=
-	      $show "$ln_s $realname $destdir/$linkname"
-	      $run $ln_s $realname $destdir/$linkname
+	      $show "(cd $destdir && $LN_S $realname $linkname)"
+	      $run eval "(cd $destdir && $LN_S $realname $linkname)"
 	    done
 	  fi
 
 	  if test -n "$dlname"; then
 	    # Install the dynamically-loadable library.
 	    $show "$install_prog $dir/$dlname $destdir/$dlname"
-	    eval "$run $install_prog $dir/$dlname $destdir/$dlname" || exit $?
+	    $run eval "$install_prog $dir/$dlname $destdir/$dlname" || exit $?
 	  fi
 
 	  # Do each command in the postinstall commands.
@@ -1323,7 +1321,7 @@ EOF
 	  for cmd in $cmds; do
 	    IFS="$save_ifs"
 	    $show "$cmd"
-	    eval "$run $cmd" || exit $?
+	    $run eval "$cmd" || exit $?
 	  done
 	  IFS="$save_ifs"
 	fi
@@ -1478,7 +1476,7 @@ EOF
       for cmd in $cmds; do
         IFS="$save_ifs"
         $show "$cmd"
-        eval "$run $cmd" || exit $?
+        $run eval "$cmd" || exit $?
       done
       IFS="$save_ifs"
     done
@@ -1567,7 +1565,7 @@ EOF
 	for cmd in $cmds; do
 	  IFS="$save_ifs"
 	  $show "$cmd"
-	  eval "$run $cmd"
+	  $run eval "$cmd"
 	done
 	IFS="$save_ifs"
       done
