--- a/configure.in
+++ b/configure.in
@@ -11,6 +11,7 @@ dnl Use the specified CC, RANLIB, and LD while running ltconfig.
 AC_PROG_CC
 AC_PROG_RANLIB
 AM_PATH_PROG_LD
+AC_PROG_LN_S
 
 AC_OUTPUT([Makefile doc/Makefile tests/Makefile])
 
