--- a/configure.in
+++ b/configure.in
@@ -10,7 +10,7 @@ AC_SUBST(aclocaldir)
 dnl Use the specified CC, RANLIB, and LD while running ltconfig.
 AC_PROG_CC
 AC_PROG_RANLIB
-AM_PATH_PROG_LD
+AM_PROG_LD
 AC_PROG_LN_S
 
 AC_OUTPUT([Makefile doc/Makefile tests/Makefile])
