--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to create configure.
 AC_INIT(ltmain.sh.in)
-AM_INIT_AUTOMAKE(libtool,1.0)
+AM_INIT_AUTOMAKE(libtool,1.0a)
 
 pkgdatadir='${datadir}/libtool'
 AC_SUBST(pkgdatadir)
@@ -11,6 +11,7 @@ dnl Use the specified CC, RANLIB, and LD while running ltconfig.
 AC_PROG_CC
 AC_PROG_RANLIB
 AM_PROG_LD
+AM_PROG_NM
 AC_PROG_LN_S
 
 AC_OUTPUT([Makefile doc/Makefile tests/Makefile])
