--- a/ltconfig.in
+++ b/ltconfig.in
@@ -61,6 +61,7 @@ old_CFLAGS="$CFLAGS"
 old_CPPFLAGS="$CPPFLAGS"
 old_LD="$LD"
 old_LN_S="$LN_S"
+old_NM="$NM"
 old_RANLIB="$RANLIB"
 
 test -z "$AR" && AR=ar
@@ -607,7 +608,7 @@ else
   case "$host_os" in
   aix3*)
     allow_undefined_flag=unsupported
-    archive_cmds='/usr/ucb/nm$libobjs | egrep \" [BD] \" | sed \"s/^.* //\" > $lib.exp;$LD -o $objdir/$soname$libobjs -bE:$lib.exp -T512 -H512 -bM:SRE -lc$deplibs;$AR cru $lib $objdir/$soname'
+    archive_cmds='$NM$libobjs | $global_symbol_pipe | sed \"s/.* //\" > $lib.exp;$LD -o $objdir/$soname$libobjs -bE:$lib.exp -T512 -H512 -bM:SRE -lc$deplibs;$AR cru $lib $objdir/$soname'
     # Note: this linker hardcodes the directories in LIBPATH if there
     # are no directories specified by -L.
     hardcode_minus_L=yes
@@ -615,7 +616,7 @@ else
 
   aix4*)
     allow_undefined_flag=unsupported
-    archive_cmds='/bin/nm -B$libobjs | egrep \" [BD] \" | sed \"s/^.* //\" > $lib.exp;$cc -o $objdir/$soname$libobjs ${wl}-bE:$lib.exp ${wl}-bM:SRE ${wl}-bnoentry$deplibs;$AR cru $lib $objdir/$soname'
+    archive_cmds='$NM$libobjs | $global_symbol_pipe | sed \"s/.* //\" > $lib.exp;$cc -o $objdir/$soname$libobjs ${wl}-bE:$lib.exp ${wl}-bM:SRE ${wl}-bnoentry$deplibs;$AR cru $lib $objdir/$soname'
     hardcode_direct=yes
     hardcode_minus_L=yes
     ;;
@@ -707,6 +708,57 @@ else
   esac
 fi
 echo $ac_t "$ld_shlibs" 1>&6
+
+if test -z "$NM"; then
+  echo $ac_n "checking for BSD-compatible nm... $ac_c" 1>&6
+  case "$NM" in
+  /*) ;; # Let the user override the test with a path.
+  *)
+    IFS="${IFS= 	}"; ac_save_ifs="$IFS"; IFS="${IFS}:"
+    for ac_dir in /usr/ucb:$PATH:/bin; do
+      test -z "$ac_dir" && dir=.
+      if test -f $ac_dir/nm; then
+        # Check to see if the nm accepts a BSD-compat flag.
+        if ($ac_dir/nm -B /dev/null 2>&1; exit 0) | grep /dev/null >/dev/null; then
+          NM="$ac_dir/nm -B"
+        elif ($ac_dir/nm -p /dev/null 2>&1; exit 0) | grep /dev/null >/dev/null; then
+          NM="$ac_dir/nm -p"
+	else
+          NM="$ac_dir/nm"
+	fi
+        break
+      fi
+    done
+    IFS="$ac_save_ifs"
+    test -z "$NM" && NM=nm
+    ;;
+  esac
+  echo "$ac_t$NM" 1>&6
+fi
+
+# Check for command to grab the raw symbol name followed by C symbol from nm.
+echo $ac_n "checking command to parse $NM output... $ac_c" 1>&6
+global_symbol_pipe=
+# WARNING: these filters need to be compatible with GNU nm, so they should
+# accept at least [BDT].
+case "$host_os" in
+aix*)
+  global_symbol_pipe="sed '/^.* [BCDT] [^.]/!d; s/^.* [BCDT] \(.*\)$/\1 \1/'"
+  ;;
+
+# These platforms may need to strip leading underscores from C symbols.
+linux-gnuoldld*) ;;
+
+linux*)
+  global_symbol_pipe="sed '/^.* [BCDT] /!d; s/^.* [BCDT] \(.*\)$/\1 \1/'"
+  ;;
+esac
+
+if test -z "$global_symbol_pipe"; then
+  echo "$ac_t"no
+else
+  echo "$ac_t"yes
+fi
 
 # Check hardcoding attributes.
 echo $ac_n "checking how to hardcode library paths into programs... $ac_c" 1>&6
@@ -925,7 +977,7 @@ cat <<EOF > $ofile
 # on host `(hostname || uname -n) 2>/dev/null | sed 1q`:
 #
 # CC="$old_CC" CFLAGS="$old_CFLAGS" CPPFLAGS="$old_CPPFLAGS" \\
-# LD="$old_LD" RANLIB="$old_RANLIB" LN_S="$old_LN_S" \\
+# LD="$old_LD" NM="$old_NM" RANLIB="$old_RANLIB" LN_S="$old_LN_S" \\
 #   $0$ltconfig_args
 #
 # Compiler and other test output produced by $progname, useful for
@@ -947,11 +999,17 @@ host="$host"
 # The archiver.
 AR='$AR'
 
+# The default C compiler.
+CC='$CC'
+
 # The linker used to build libraries.
 LD='$LD'
 
 # Whether we need hard or soft links.
 LN_S='$LN_S'
+
+# A BSD-compatible nm program.
+NM='$NM'
 
 # How to create reloadable object files.
 reload_flag='$reload_flag'
@@ -996,6 +1054,9 @@ allow_undefined_flag='$allow_undefined_flag'
 
 # Commands used to finish a libtool library installation in a directory.
 finish_cmds='$finish_cmds'
+
+# Take the output of nm and produce a listing of raw symbols and C names
+global_symbol_pipe="$global_symbol_pipe"
 
 # How to strip a library file.
 striplib='$striplib'
